--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -rf dist ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
@@ -13,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.57.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   },
